--- a/book.bib
+++ b/book.bib
@@ -54,8 +54,8 @@ URL = {http://www.aeaweb.org/articles?id=10.1257/aer.20150355}}
   publisher={MIT Press}
 }
 @article{angristkrueger,
-    author = {Angrist, Joshua D. and Keueger, Alan B.},
-    title = "{Does Compulsory School Attendance Affect Schooling and Earnings?*}",
+    author = {Angrist, Joshua D. and Krueger, Alan B.},
+    title = {Does Compulsory School Attendance Affect Schooling and Earnings?},
     journal = {The Quarterly Journal of Economics},
     volume = {106},
     number = {4},
@@ -67,6 +67,15 @@ URL = {http://www.aeaweb.org/articles?id=10.1257/aer.20150355}}
     doi = {10.2307/2937954},
     url = {https://doi.org/10.2307/2937954},
     eprint = {https://academic.oup.com/qje/article-pdf/106/4/979/5298446/106-4-979.pdf},
+}
+@article{angristkruegerIV,
+  title={Instrumental variables and the search for identification: From supply and demand to natural experiments},
+  author={Angrist, Joshua D and Krueger, Alan B},
+  journal={Journal of Economic perspectives},
+  volume={15},
+  number={4},
+  pages={69--85},
+  year={2001}
 }
 
 
